Jooq generation using JPA annotations.